--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "^4.14.0",
     "formsy-react": "^0.18.1",
     "formsy-react-components": "^0.8.1",
-    "graphql": "^0.6.2",
+    "graphql": "^0.7.0",
     "graphql-tools": "^0.6.4",
     "handlebars": "^4.0.5",
     "history": "^3.0.0",
@@ -29,6 +29,8 @@
     "meteor-node-stubs": "^0.2.3",
     "moment": "^2.13.0",
     "react": "^15.3.1",
+    "react-addons-pure-render-mixin": "^15.3.1",
+    "react-apollo": "^0.5.4",
     "react-bootstrap": "^0.30.3",
     "react-bootstrap-datetimepicker": "0.0.22",
     "react-cookie": "^0.4.6",
@@ -41,8 +43,8 @@
     "react-no-ssr": "^1.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0-alpha.1",
-    "redux": "^3.5.2",
     "react-router-bootstrap": "^0.23.1",
+    "redux": "^3.5.2",
     "sanitize-html": "^1.11.4",
     "speakingurl": "^9.0.0",
     "tracker-component": "^1.3.14",
