--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "apollo-client": "^0.4.14",
     "apollo-server": "^0.2.4",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "bootstrap": "^4.0.0-alpha.2",
@@ -53,7 +52,8 @@
   },
   "private": true,
   "devDependencies": {
-    "autoprefixer": "^6.3.6"
+    "autoprefixer": "^6.3.6",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4"
   },
   "postcss": {
     "plugins": {
